finished draft of front PCB

--- a/POWER_PCB/POWER_PCB.ioc
+++ b/POWER_PCB/POWER_PCB.ioc
@@ -24,10 +24,9 @@ Mcu.Pin1=PF1-OSC_OUT
 Mcu.Pin10=PA14
 Mcu.Pin11=PA15
 Mcu.Pin12=PB3
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin13=PB5
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -36,7 +35,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F301K6Ux
@@ -86,11 +85,9 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=TP_SS
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PB3.Mode=Full_Duplex_Master
+PB3.Mode=Simplex_Bidirectional_Master
 PB3.Signal=SPI3_SCK
-PB4.Mode=Full_Duplex_Master
-PB4.Signal=SPI3_MISO
-PB5.Mode=Full_Duplex_Master
+PB5.Mode=Simplex_Bidirectional_Master
 PB5.Signal=SPI3_MOSI
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
@@ -162,7 +159,7 @@ SH.GPXTI3.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SPI3.CalculateBaudRate=4.0 MBits/s
-SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.Direction=SPI_DIRECTION_1LINE
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
